--- a/Models - Supervised ML/Fraud_detection_Supervised.ipynb
+++ b/Models - Supervised ML/Fraud_detection_Supervised.ipynb
@@ -13,7 +13,7 @@
         "import pandas as pd\n",
         "from pathlib import Path\n",
         "from matplotlib import pyplot as plt\n",
-        "from sklearn.linear_model import LinearRegression, LogisticRegression, Ridge, Lasso\n",
+        "from sklearn.linear_model impor LogisticRegression\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -423,7 +423,6 @@
       ],
       "source": [
         "from collections import Counter\n",
-        "#\n",
         "target = df.values[:, -1]\n",
         "counter = Counter(target)\n",
         "for k,v in counter.items():\n",
