--- a/Models - Neural Network/Fraud_detection_NN_METRICS_Activation_Tanh.ipynb
+++ b/Models - Neural Network/Fraud_detection_NN_METRICS_Activation_Tanh.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,7 +14,6 @@
         "import pandas as pd\n",
         "from pathlib import Path\n",
         "from matplotlib import pyplot as plt\n",
-        "from sklearn.linear_model import LogisticRegression, Ridge, Lasso\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler,OneHotEncoder\n",
         "import sklearn as skl\n",
@@ -41,10 +26,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = pd.read_csv(\"creditcardfraud_normalised.csv\")\n",
-        "df"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -53,53 +35,9 @@
         "id": "GdagcrVik72N",
         "outputId": "4da6cdfa-b40e-4e3d-b806-f74b6e4d1c18"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "              V1        V2        V3        V4        V5        V6        V7  \\\n",
-              "0       0.935192  0.766490  0.881365  0.313023  0.763439  0.267669  0.266815   \n",
-              "1       0.978542  0.770067  0.840298  0.271796  0.766120  0.262192  0.264875   \n",
-              "2       0.935217  0.753118  0.868141  0.268766  0.762329  0.281122  0.270177   \n",
-              "3       0.941878  0.765304  0.868484  0.213661  0.765647  0.275559  0.266803   \n",
-              "4       0.938617  0.776520  0.864251  0.269796  0.762975  0.263984  0.268968   \n",
-              "...          ...       ...       ...       ...       ...       ...       ...   \n",
-              "109095  0.945267  0.775710  0.861755  0.219453  0.770077  0.260500  0.269232   \n",
-              "109096  0.978500  0.767318  0.839645  0.300379  0.764532  0.260523  0.265456   \n",
-              "109097  0.977709  0.762571  0.803680  0.208215  0.780589  0.292035  0.265439   \n",
-              "109098  0.977142  0.771956  0.852106  0.359707  0.763077  0.259376  0.265026   \n",
-              "109099  0.981578  0.757651  0.854296  0.219884  0.755365  0.262654  0.257083   \n",
-              "\n",
-              "              V8        V9       V10  ...       V21       V22       V23  \\\n",
-              "0       0.786444  0.475312  0.510600  ...  0.561184  0.522992  0.663793   \n",
-              "1       0.786298  0.453981  0.505267  ...  0.557840  0.480237  0.666938   \n",
-              "2       0.788042  0.410603  0.513018  ...  0.565477  0.546030  0.678939   \n",
-              "3       0.789434  0.414999  0.507585  ...  0.559734  0.510277  0.662607   \n",
-              "4       0.782484  0.490950  0.524303  ...  0.561327  0.547271  0.663392   \n",
-              "...          ...       ...       ...  ...       ...       ...       ...   \n",
-              "109095  0.786090  0.441859  0.499398  ...  0.558917  0.479100  0.662796   \n",
-              "109096  0.785193  0.481659  0.506978  ...  0.557382  0.474237  0.663860   \n",
-              "109097  0.791531  0.452854  0.507137  ...  0.561027  0.487366  0.662048   \n",
-              "109098  0.786537  0.435031  0.526833  ...  0.558350  0.474510  0.667902   \n",
-              "109099  0.787057  0.463398  0.522267  ...       NaN       NaN       NaN   \n",
-              "\n",
-              "             V24       V25       V26       V27       V28    Amount  class  \n",
-              "0       0.391253  0.585122  0.394557  0.418976  0.312697  0.005824    0.0  \n",
-              "1       0.336440  0.587290  0.446013  0.416345  0.313423  0.000105    0.0  \n",
-              "2       0.289354  0.559515  0.402727  0.415489  0.311911  0.014739    0.0  \n",
-              "3       0.223826  0.614245  0.389197  0.417669  0.314371  0.004807    0.0  \n",
-              "4       0.401270  0.566343  0.507497  0.420561  0.317490  0.002724    0.0  \n",
-              "...          ...       ...       ...       ...       ...       ...    ...  \n",
-              "109095  0.311702  0.571914  0.421178  0.414496  0.315261  0.000175    0.0  \n",
-              "109096  0.314923  0.610668  0.350053  0.416725  0.313564  0.001880    0.0  \n",
-              "109097  0.529265  0.615186  0.600702  0.414028  0.313231  0.005021    0.0  \n",
-              "109098  0.441509  0.585849  0.377726  0.416127  0.313513  0.000470    0.0  \n",
-              "109099       NaN       NaN       NaN       NaN       NaN       NaN    NaN  \n",
-              "\n",
-              "[109100 rows x 30 columns]"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-cedce347-19e6-4947-b28b-f03ab897fb59\">\n",
@@ -490,63 +428,115 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "              V1        V2        V3        V4        V5        V6        V7  \\\n",
+              "0       0.935192  0.766490  0.881365  0.313023  0.763439  0.267669  0.266815   \n",
+              "1       0.978542  0.770067  0.840298  0.271796  0.766120  0.262192  0.264875   \n",
+              "2       0.935217  0.753118  0.868141  0.268766  0.762329  0.281122  0.270177   \n",
+              "3       0.941878  0.765304  0.868484  0.213661  0.765647  0.275559  0.266803   \n",
+              "4       0.938617  0.776520  0.864251  0.269796  0.762975  0.263984  0.268968   \n",
+              "...          ...       ...       ...       ...       ...       ...       ...   \n",
+              "109095  0.945267  0.775710  0.861755  0.219453  0.770077  0.260500  0.269232   \n",
+              "109096  0.978500  0.767318  0.839645  0.300379  0.764532  0.260523  0.265456   \n",
+              "109097  0.977709  0.762571  0.803680  0.208215  0.780589  0.292035  0.265439   \n",
+              "109098  0.977142  0.771956  0.852106  0.359707  0.763077  0.259376  0.265026   \n",
+              "109099  0.981578  0.757651  0.854296  0.219884  0.755365  0.262654  0.257083   \n",
+              "\n",
+              "              V8        V9       V10  ...       V21       V22       V23  \\\n",
+              "0       0.786444  0.475312  0.510600  ...  0.561184  0.522992  0.663793   \n",
+              "1       0.786298  0.453981  0.505267  ...  0.557840  0.480237  0.666938   \n",
+              "2       0.788042  0.410603  0.513018  ...  0.565477  0.546030  0.678939   \n",
+              "3       0.789434  0.414999  0.507585  ...  0.559734  0.510277  0.662607   \n",
+              "4       0.782484  0.490950  0.524303  ...  0.561327  0.547271  0.663392   \n",
+              "...          ...       ...       ...  ...       ...       ...       ...   \n",
+              "109095  0.786090  0.441859  0.499398  ...  0.558917  0.479100  0.662796   \n",
+              "109096  0.785193  0.481659  0.506978  ...  0.557382  0.474237  0.663860   \n",
+              "109097  0.791531  0.452854  0.507137  ...  0.561027  0.487366  0.662048   \n",
+              "109098  0.786537  0.435031  0.526833  ...  0.558350  0.474510  0.667902   \n",
+              "109099  0.787057  0.463398  0.522267  ...       NaN       NaN       NaN   \n",
+              "\n",
+              "             V24       V25       V26       V27       V28    Amount  class  \n",
+              "0       0.391253  0.585122  0.394557  0.418976  0.312697  0.005824    0.0  \n",
+              "1       0.336440  0.587290  0.446013  0.416345  0.313423  0.000105    0.0  \n",
+              "2       0.289354  0.559515  0.402727  0.415489  0.311911  0.014739    0.0  \n",
+              "3       0.223826  0.614245  0.389197  0.417669  0.314371  0.004807    0.0  \n",
+              "4       0.401270  0.566343  0.507497  0.420561  0.317490  0.002724    0.0  \n",
+              "...          ...       ...       ...       ...       ...       ...    ...  \n",
+              "109095  0.311702  0.571914  0.421178  0.414496  0.315261  0.000175    0.0  \n",
+              "109096  0.314923  0.610668  0.350053  0.416725  0.313564  0.001880    0.0  \n",
+              "109097  0.529265  0.615186  0.600702  0.414028  0.313231  0.005021    0.0  \n",
+              "109098  0.441509  0.585849  0.377726  0.416127  0.313513  0.000470    0.0  \n",
+              "109099       NaN       NaN       NaN       NaN       NaN       NaN    NaN  \n",
+              "\n",
+              "[109100 rows x 30 columns]"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df = pd.read_csv(\"creditcardfraud_normalised.csv\")\n",
+        "df"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "HXEZAyyqqnkv"
+      },
+      "outputs": [],
       "source": [
         "# Remove class target from features data\n",
         "y = df[\"class\"].values\n",
         "X = df.drop(columns=\"class\").values"
-      ],
-      "metadata": {
-        "id": "HXEZAyyqqnkv"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Labels = df[\"class\"].values\n",
-        "Features = df.drop(columns=\"class\").values"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "QEaDMbyzWuaw"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "Labels = df[\"class\"].values\n",
+        "Features = df.drop(columns=\"class\").values"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Split training/test datasets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "7eEXnoolrVbN"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Split training/test datasets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "number_input_features = len(X_train[0])"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "w26Im_9etXAv"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "number_input_features = len(X_train[0])"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "qVX149erCRsg"
+      },
+      "outputs": [],
       "source": [
         "METRICS = [\n",
         "      keras.metrics.TruePositives(name='tp'),\n",
@@ -559,34 +549,26 @@
         "      keras.metrics.AUC(name='auc'),\n",
         "      keras.metrics.AUC(name='prc', curve='PR')\n",
         "]"
-      ],
-      "metadata": {
-        "id": "qVX149erCRsg"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "R6pwebzGHk7G"
+      },
+      "outputs": [],
       "source": [
         "# Define the deep learning model \n",
         "nn_model = tf.keras.models.Sequential()\n",
         "nn_model.add(tf.keras.layers.Dense(units=16, activation=\"tanh\", input_dim=number_input_features))\n",
         "nn_model.add(tf.keras.layers.Dense(units=32, activation=\"tanh\"))\n",
         "nn_model.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))"
-      ],
-      "metadata": {
-        "id": "R6pwebzGHk7G"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Check the structure of the model\n",
-        "nn_model.summary()"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -594,11 +576,10 @@
         "id": "y-n0hFNYH2Pb",
         "outputId": "2f01a980-3572-4fdd-966c-fe9bb1afa33f"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
@@ -617,26 +598,27 @@
             "_________________________________________________________________\n"
           ]
         }
+      ],
+      "source": [
+        "# Check the structure of the model\n",
+        "nn_model.summary()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Compile the Sequential model together and customize metrics\n",
-        "nn_model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=METRICS)\n"
-      ],
+      "execution_count": 10,
       "metadata": {
         "id": "pmHYfac7H7uq"
       },
-      "execution_count": 10,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Compile the Sequential model together and customize metrics\n",
+        "nn_model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=METRICS)\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Train the model\n",
-        "fit_model = nn_model.fit(X_train, y_train, epochs=100)"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -644,11 +626,10 @@
         "id": "hQZhbVQ5IEKC",
         "outputId": "e9a34abc-8822-4e3a-9022-8a1204fdefa4"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
             "2558/2558 [==============================] - 10s 3ms/step - loss: 0.0165 - tp: 17.0000 - fp: 31.0000 - tn: 81620.0000 - fn: 157.0000 - accuracy: 0.9980 - precision: 0.3542 - recall: 0.0977 - auc: 0.7550 - prc: 0.0898\n",
@@ -852,26 +833,27 @@
             "2558/2558 [==============================] - 7s 3ms/step - loss: 0.0028 - tp: 139.0000 - fp: 9.0000 - tn: 81642.0000 - fn: 35.0000 - accuracy: 0.9994 - precision: 0.9392 - recall: 0.7989 - auc: 0.9448 - prc: 0.8636\n"
           ]
         }
+      ],
+      "source": [
+        "# Train the model\n",
+        "fit_model = nn_model.fit(X_train, y_train, epochs=100)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import warnings\n",
-        "warnings.filterwarnings(\"ignore\")"
-      ],
+      "execution_count": 12,
       "metadata": {
         "id": "r7FLnvdnVB_Z"
       },
-      "execution_count": 12,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Evaluate the model using the test data\n",
-        "baseline_results = nn_model.evaluate(X_test,y_test,verbose=2)"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -879,16 +861,33 @@
         "id": "QkpoA_2qAS9e",
         "outputId": "c3fb181d-65c2-45d4-bec4-22c64ff39895"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "853/853 - 3s - loss: nan - tp: 51.0000 - fp: 3.0000 - tn: 27206.0000 - fn: 15.0000 - accuracy: 0.9993 - precision: 0.9444 - recall: 0.7727 - auc: 0.9162 - prc: 0.8255 - 3s/epoch - 3ms/step\n"
           ]
         }
+      ],
+      "source": [
+        "# Evaluate the model using the test data\n",
+        "baseline_results = nn_model.evaluate(X_test,y_test,verbose=2)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
