--- a/Models - Neural Network/Fraud_detection_NN_METRICS_Threshold0.6.ipynb
+++ b/Models - Neural Network/Fraud_detection_NN_METRICS_Threshold0.6.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,7 +14,6 @@
         "import pandas as pd\n",
         "from pathlib import Path\n",
         "from matplotlib import pyplot as plt\n",
-        "from sklearn.linear_model import LogisticRegression, Ridge, Lasso\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler,OneHotEncoder\n",
         "import sklearn as skl\n",
@@ -41,10 +26,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = pd.read_csv(\"creditcardfraud_normalised.csv\")\n",
-        "df"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -53,53 +35,9 @@
         "id": "GdagcrVik72N",
         "outputId": "8b52d980-ad50-4b7a-fa02-9d048f9bbd37"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "              V1        V2        V3        V4        V5        V6        V7  \\\n",
-              "0       0.935192  0.766490  0.881365  0.313023  0.763439  0.267669  0.266815   \n",
-              "1       0.978542  0.770067  0.840298  0.271796  0.766120  0.262192  0.264875   \n",
-              "2       0.935217  0.753118  0.868141  0.268766  0.762329  0.281122  0.270177   \n",
-              "3       0.941878  0.765304  0.868484  0.213661  0.765647  0.275559  0.266803   \n",
-              "4       0.938617  0.776520  0.864251  0.269796  0.762975  0.263984  0.268968   \n",
-              "...          ...       ...       ...       ...       ...       ...       ...   \n",
-              "113137  0.841309  0.816024  0.792289  0.282615  0.740322  0.253078  0.251221   \n",
-              "113138  0.945653  0.767278  0.844907  0.191801  0.760076  0.251339  0.270519   \n",
-              "113139  0.979030  0.766959  0.841681  0.283484  0.764704  0.262167  0.265260   \n",
-              "113140  0.935423  0.762401  0.853743  0.059288  0.762553  0.266011  0.263649   \n",
-              "113141  0.942744  0.786172  0.876508  0.388682  0.761941  0.262045  0.266500   \n",
-              "\n",
-              "              V8        V9       V10  ...       V21       V22       V23  \\\n",
-              "0       0.786444  0.475312  0.510600  ...  0.561184  0.522992  0.663793   \n",
-              "1       0.786298  0.453981  0.505267  ...  0.557840  0.480237  0.666938   \n",
-              "2       0.788042  0.410603  0.513018  ...  0.565477  0.546030  0.678939   \n",
-              "3       0.789434  0.414999  0.507585  ...  0.559734  0.510277  0.662607   \n",
-              "4       0.782484  0.490950  0.524303  ...  0.561327  0.547271  0.663392   \n",
-              "...          ...       ...       ...  ...       ...       ...       ...   \n",
-              "113137  0.825094  0.481402  0.543023  ...  0.562697  0.519669  0.662068   \n",
-              "113138  0.783252  0.483625  0.484598  ...  0.561873  0.529193  0.672775   \n",
-              "113139  0.783963  0.479173  0.503229  ...  0.559730  0.506699  0.661908   \n",
-              "113140  0.794324  0.480879  0.466926  ...  0.560679  0.534024  0.667729   \n",
-              "113141  0.700000       NaN       NaN  ...       NaN       NaN       NaN   \n",
-              "\n",
-              "             V24       V25       V26       V27       V28    Amount  class  \n",
-              "0       0.391253  0.585122  0.394557  0.418976  0.312697  0.005824    0.0  \n",
-              "1       0.336440  0.587290  0.446013  0.416345  0.313423  0.000105    0.0  \n",
-              "2       0.289354  0.559515  0.402727  0.415489  0.311911  0.014739    0.0  \n",
-              "3       0.223826  0.614245  0.389197  0.417669  0.314371  0.004807    0.0  \n",
-              "4       0.401270  0.566343  0.507497  0.420561  0.317490  0.002724    0.0  \n",
-              "...          ...       ...       ...       ...       ...       ...    ...  \n",
-              "113137  0.435184  0.647204  0.414671  0.421945  0.316362  0.001616    0.0  \n",
-              "113138  0.444037  0.567557  0.423245  0.412268  0.306299  0.005770    0.0  \n",
-              "113139  0.334122  0.618834  0.504274  0.416238  0.313345  0.001557    0.0  \n",
-              "113140  0.294862  0.568722  0.264905  0.423336  0.315146  0.002408    0.0  \n",
-              "113141       NaN       NaN       NaN       NaN       NaN       NaN    NaN  \n",
-              "\n",
-              "[113142 rows x 30 columns]"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-3c027809-7c2d-4516-9939-f568a47de8c0\">\n",
@@ -490,63 +428,115 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "              V1        V2        V3        V4        V5        V6        V7  \\\n",
+              "0       0.935192  0.766490  0.881365  0.313023  0.763439  0.267669  0.266815   \n",
+              "1       0.978542  0.770067  0.840298  0.271796  0.766120  0.262192  0.264875   \n",
+              "2       0.935217  0.753118  0.868141  0.268766  0.762329  0.281122  0.270177   \n",
+              "3       0.941878  0.765304  0.868484  0.213661  0.765647  0.275559  0.266803   \n",
+              "4       0.938617  0.776520  0.864251  0.269796  0.762975  0.263984  0.268968   \n",
+              "...          ...       ...       ...       ...       ...       ...       ...   \n",
+              "113137  0.841309  0.816024  0.792289  0.282615  0.740322  0.253078  0.251221   \n",
+              "113138  0.945653  0.767278  0.844907  0.191801  0.760076  0.251339  0.270519   \n",
+              "113139  0.979030  0.766959  0.841681  0.283484  0.764704  0.262167  0.265260   \n",
+              "113140  0.935423  0.762401  0.853743  0.059288  0.762553  0.266011  0.263649   \n",
+              "113141  0.942744  0.786172  0.876508  0.388682  0.761941  0.262045  0.266500   \n",
+              "\n",
+              "              V8        V9       V10  ...       V21       V22       V23  \\\n",
+              "0       0.786444  0.475312  0.510600  ...  0.561184  0.522992  0.663793   \n",
+              "1       0.786298  0.453981  0.505267  ...  0.557840  0.480237  0.666938   \n",
+              "2       0.788042  0.410603  0.513018  ...  0.565477  0.546030  0.678939   \n",
+              "3       0.789434  0.414999  0.507585  ...  0.559734  0.510277  0.662607   \n",
+              "4       0.782484  0.490950  0.524303  ...  0.561327  0.547271  0.663392   \n",
+              "...          ...       ...       ...  ...       ...       ...       ...   \n",
+              "113137  0.825094  0.481402  0.543023  ...  0.562697  0.519669  0.662068   \n",
+              "113138  0.783252  0.483625  0.484598  ...  0.561873  0.529193  0.672775   \n",
+              "113139  0.783963  0.479173  0.503229  ...  0.559730  0.506699  0.661908   \n",
+              "113140  0.794324  0.480879  0.466926  ...  0.560679  0.534024  0.667729   \n",
+              "113141  0.700000       NaN       NaN  ...       NaN       NaN       NaN   \n",
+              "\n",
+              "             V24       V25       V26       V27       V28    Amount  class  \n",
+              "0       0.391253  0.585122  0.394557  0.418976  0.312697  0.005824    0.0  \n",
+              "1       0.336440  0.587290  0.446013  0.416345  0.313423  0.000105    0.0  \n",
+              "2       0.289354  0.559515  0.402727  0.415489  0.311911  0.014739    0.0  \n",
+              "3       0.223826  0.614245  0.389197  0.417669  0.314371  0.004807    0.0  \n",
+              "4       0.401270  0.566343  0.507497  0.420561  0.317490  0.002724    0.0  \n",
+              "...          ...       ...       ...       ...       ...       ...    ...  \n",
+              "113137  0.435184  0.647204  0.414671  0.421945  0.316362  0.001616    0.0  \n",
+              "113138  0.444037  0.567557  0.423245  0.412268  0.306299  0.005770    0.0  \n",
+              "113139  0.334122  0.618834  0.504274  0.416238  0.313345  0.001557    0.0  \n",
+              "113140  0.294862  0.568722  0.264905  0.423336  0.315146  0.002408    0.0  \n",
+              "113141       NaN       NaN       NaN       NaN       NaN       NaN    NaN  \n",
+              "\n",
+              "[113142 rows x 30 columns]"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df = pd.read_csv(\"creditcardfraud_normalised.csv\")\n",
+        "df"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "HXEZAyyqqnkv"
+      },
+      "outputs": [],
       "source": [
         "# Remove class target from features data\n",
         "y = df[\"class\"].values\n",
         "X = df.drop(columns=\"class\").values"
-      ],
-      "metadata": {
-        "id": "HXEZAyyqqnkv"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Labels = df[\"class\"].values\n",
-        "Features = df.drop(columns=\"class\").values"
-      ],
+      "execution_count": 62,
       "metadata": {
         "id": "QEaDMbyzWuaw"
       },
-      "execution_count": 62,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "Labels = df[\"class\"].values\n",
+        "Features = df.drop(columns=\"class\").values"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Split training/test datasets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "7eEXnoolrVbN"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Split training/test datasets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "number_input_features = len(X_train[0])"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "w26Im_9etXAv"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "number_input_features = len(X_train[0])"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 83,
+      "metadata": {
+        "id": "qVX149erCRsg"
+      },
+      "outputs": [],
       "source": [
         "METRICS = [\n",
         "      keras.metrics.TruePositives(name='tp'),\n",
@@ -559,34 +549,26 @@
         "      keras.metrics.AUC(name='auc'),\n",
         "      keras.metrics.AUC(name='prc', curve='PR')\n",
         "]"
-      ],
-      "metadata": {
-        "id": "qVX149erCRsg"
-      },
-      "execution_count": 83,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 84,
+      "metadata": {
+        "id": "R6pwebzGHk7G"
+      },
+      "outputs": [],
       "source": [
         "# Define the deep learning model \n",
         "nn_model = tf.keras.models.Sequential()\n",
         "nn_model.add(tf.keras.layers.Dense(units=16, activation=\"relu\", input_dim=number_input_features))\n",
         "nn_model.add(tf.keras.layers.Dense(units=32, activation=\"relu\"))\n",
         "nn_model.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))"
-      ],
-      "metadata": {
-        "id": "R6pwebzGHk7G"
-      },
-      "execution_count": 84,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Check the structure of the model\n",
-        "nn_model.summary()"
-      ],
+      "execution_count": 85,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -594,11 +576,10 @@
         "id": "y-n0hFNYH2Pb",
         "outputId": "f4da1d5a-306d-4705-e8f5-5eaf05939bc9"
       },
-      "execution_count": 85,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"sequential_5\"\n",
             "_________________________________________________________________\n",
@@ -617,26 +598,27 @@
             "_________________________________________________________________\n"
           ]
         }
+      ],
+      "source": [
+        "# Check the structure of the model\n",
+        "nn_model.summary()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Compile the Sequential model together and customize metrics\n",
-        "nn_model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=METRICS)\n"
-      ],
+      "execution_count": 86,
       "metadata": {
         "id": "pmHYfac7H7uq"
       },
-      "execution_count": 86,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Compile the Sequential model together and customize metrics\n",
+        "nn_model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=METRICS)\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Train the model\n",
-        "fit_model = nn_model.fit(X_train, y_train, epochs=100)"
-      ],
+      "execution_count": 87,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -644,11 +626,10 @@
         "id": "hQZhbVQ5IEKC",
         "outputId": "ebca1480-be12-4f90-e390-398e6cfe6732"
       },
-      "execution_count": 87,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
             "2652/2652 [==============================] - 10s 3ms/step - loss: 0.0213 - tp: 0.0000e+00 - fp: 233.0000 - tn: 84456.0000 - fn: 167.0000 - accuracy: 0.9980 - precision: 0.0000e+00 - recall: 0.0000e+00 - auc: 0.7167 - prc: 0.0073\n",
@@ -852,26 +833,27 @@
             "2652/2652 [==============================] - 8s 3ms/step - loss: 0.0026 - tp: 138.0000 - fp: 18.0000 - tn: 84671.0000 - fn: 29.0000 - accuracy: 0.9995 - precision: 0.8846 - recall: 0.8263 - auc: 0.9577 - prc: 0.8807\n"
           ]
         }
+      ],
+      "source": [
+        "# Train the model\n",
+        "fit_model = nn_model.fit(X_train, y_train, epochs=100)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import warnings\n",
-        "warnings.filterwarnings(\"ignore\")"
-      ],
+      "execution_count": 90,
       "metadata": {
         "id": "r7FLnvdnVB_Z"
       },
-      "execution_count": 90,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Evaluate the model using the test data\n",
-        "baseline_results = nn_model.evaluate(X_test,y_test,verbose=2)"
-      ],
+      "execution_count": 91,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -879,16 +861,33 @@
         "id": "QkpoA_2qAS9e",
         "outputId": "15240eec-0eb3-4dc8-abde-aceee35ff1db"
       },
-      "execution_count": 91,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "884/884 - 2s - loss: nan - tp: 58.0000 - fp: 4.0000 - tn: 28207.0000 - fn: 17.0000 - accuracy: 0.9993 - precision: 0.9355 - recall: 0.7733 - auc: 0.8927 - prc: 0.7785 - 2s/epoch - 2ms/step\n"
           ]
         }
+      ],
+      "source": [
+        "# Evaluate the model using the test data\n",
+        "baseline_results = nn_model.evaluate(X_test,y_test,verbose=2)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
